Update super-setup-final.sh